Fixed a small bug with output of mathquill. Where the width of the container was too small.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -69,7 +69,7 @@ sub{							/* between bootstrap*/
 .s_input_field{
 	margin-top: 15px;
 }
-.mq-math-mode:not(.mq-editable-field):not(.input_mathquill){
+.mq-math-mode:not(.mq-editable-field):not(.input_mathquill):not(.output_mathquill){
 	height: 34px;
 	width: 34px;
 }
